# EchoShield

./: .gitignore  README.md  README.zh-CN.md  index.html  main.rs  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
scripts/: generate-icons.js
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs
src/components/: AuthNavBar.vue  NavBar.vue  ReturnButton.vue
src/i18n/: en.json  zh-CN.json
src/router/: index.js
src/stores/: user.js
src/utils/: login.js  version.js  wave.js
src/views/: AsyncUpload.vue  AsyncView.vue  ConfigView.vue  HomeView.vue  ListView.vue  NotFound.vue  ProtectView.vue  SplashView.vue
src/views/auth/: LoginView.vue  RegisterView.vue  WelcomeAuth.vue
