[package]
name = "echoshield"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "fs-exists", "fs-read-file", "fs-write-file", "fs-read-dir", "fs-create-dir"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
tokio = { version = "1.36.0", features = ["full"] }
bcrypt = "0.15.0"
uuid = { version = "1.7.0", features = ["v4"] }
chrono = "0.4.35"
cpal = "0.15.3"
dasp_sample = "0.11"
hound = "3.5.1"
directories = "5.0.1"
lazy_static = "1.5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
